--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,13 +12,9 @@
   <body>
       <header class="header">
       <div class="header__title">
-        <%= link_to "Our Blog", '#', class: "header__title--text" %>
-      </div>
-      <div class="header__right">
-        <%= link_to "新規投稿", '#', class: "header__right--btn" %>
+        <%= link_to "ファッションコーデアプリ", '#', class: "header__title--text" %>
       </div>
     </header>
-    <div class="contents">
     <%= yield %>
   </body>
 </html>
