--- a/app/assets/stylesheets/all/app.scss
+++ b/app/assets/stylesheets/all/app.scss
@@ -1,19 +1,22 @@
-.header{
-  height: 56px;
-  width: 100%;
-  padding: 0 150px;
-  background-color: #005FFF;
-  opacity: 0.9;
-  color: #fff;
-  display: flex;
-  justify-content: space-between;
-  &__title{
-    font-size: 25px;
-    line-height: 56px;
-    &--text{
-      text-decoration: none;
-      color: #fff;
+body{
+  background-color: #f6f6f6;
+  min-width: 650px;
+  .header{
+    height: 56px;
+    width: 100%;
+    padding: 0 150px;
+    background-color: #005FFF;
+    opacity: 0.9;
+    color: #fff;
+    display: flex;
+    justify-content: space-between;
+    &__title{
+      font-size: 30px;
+      line-height: 56px;
+      &--text{
+        text-decoration: none;
+        color: #fff;
+      }
     }
   }
-}
-
+}    
