--- a/app/assets/stylesheets/all/index.scss
+++ b/app/assets/stylesheets/all/index.scss
@@ -1,7 +1,7 @@
-.bodies{
+.main{
   margin: 30px auto 0;
   background-color: #fff;
-  height: 650px;
+  height: 600px;
   width: 70%;
   overflow: scroll;
 }
