--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,16 +4,16 @@
     <title>Fuku</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
+    <%= Gon::Base.render_data %>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= include_gon %>
     <%= javascript_include_tag 'application'%>
+    
   </head>
 
   <body>
       <header class="header">
       <div class="header__title">
-        <%= link_to "ファッションコーデアプリ", '#', class: "header__title--text" %>
+        <%= link_to "配色コーデアプリ", '#', class: "header__title--text" %>
       </div>
     </header>
     <%= yield %>
