--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -1,8 +1,11 @@
-= Gon::Base.render_data
 .main
   .head
     .head__up#target
     .head__down
+  .upper__body
+    
+  .Lower__body
+  .sneakers
   %form
     %input{type: "button", value:"更新" ,onclick: "effect()"}/
   .post
