--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -1,12 +1,29 @@
 .main
-  .head
-    .head__up#target
-    .head__down
-  .upper__body
-    
-  .Lower__body
-  .sneakers
+  .main_head
+    .head-up#head_color
+    .head-down
+  .main_upper-body1
+    .upper_body#upper-body-color1
+  .main_upper-body2 
+    .upper_body#upper-body-left
+    .blank_upper_left1 
+    .upper_body#upper-body-center1
+    .blank_upper_rigth1
+    .upper_body#upper-body-rigth
+  .main_upper-body3
+    .upper-left-hand
+    .blank_upper_left2
+    .upper_body#upper-body-center2
+    .blank_upper_rigth2
+    .upper-rigth-hand2
+  .Lower-body
+  .sneaker
   %form
-    %input{type: "button", value:"更新" ,onclick: "effect()"}/
-  .post
+    %input{type: "button", value:"更新" ,onclick:"effect()"}/
+  .post_new
     = link_to "新規登録", new_product_path, class: "btn-default btn-gray"
+  .post_edit
+    = link_to "色編集", new_product_path, class: "btn-default btn-gray"
+
+
+.blank_left
