--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -3,21 +3,29 @@
     .head-up#head_color
     .head-down
   .main_upper-body1
-    .upper_body#upper-body-color1
+    .upper_body#upper-body-center1
   .main_upper-body2 
     .upper_body#upper-body-left
     .blank_upper_left1 
-    .upper_body#upper-body-center1
+    .upper_body#upper-body-center2
     .blank_upper_rigth1
     .upper_body#upper-body-rigth
   .main_upper-body3
     .upper-left-hand
     .blank_upper_left2
-    .upper_body#upper-body-center2
+    .upper_body#upper-body-center3
     .blank_upper_rigth2
     .upper-rigth-hand2
-  .Lower-body
-  .sneaker
+  .main_leg1
+    .leg#leg-center
+  .main_leg2
+    .leg#leg_left
+    .blank_leg_center
+    .leg#leg_rigth
+  .main_shoes
+    .shoes#shoes_left
+    .blank_shoes_center
+    .shoes#shoes_rigth
   %form
     %input{type: "button", value:"更新" ,onclick:"effect()"}/
   .post_new
