--- a/app/assets/stylesheets/all/index.scss
+++ b/app/assets/stylesheets/all/index.scss
@@ -5,14 +5,19 @@
   width: 70%;
   overflow: scroll;
 }
-
-//頭
-.main_head{
-  border-bottom: 1px solid #f6f6f6;
-  align-items: center;
+$color1:  #F0DDC3;
+//中止位置を割り出す為のSCSS 同じ記述がたくさんある為、定義した
+.center1{
+  align-items: center; //下記3つで中央に持ってくる
   display: flex;
   flex-direction: column;
- 
+}
+
+//頭の部分のscss
+.main_head{
+  border-bottom: 1px solid #f6f6f6;
+  margin-top: 30px;
+  @extend .center1;
 }      
 .head-up{
 	display: inline-block;
@@ -30,93 +35,148 @@
 	width: 100px;
   height: 70px;
 	border-radius:50%/ 0 0 80% 80%; //半円
-	background: #F0DDC3;
+	background: $color1;
 
 }
 
 //上半身
+$body_upper_height1: 100px; //ボディーとブランク高さを定義
 .main_upper-body1{
-  align-items: center; //下記3つで中央に持ってくる
-  display: flex;
-  flex-direction: column;
+  @extend .center1;
 }
-#upper-body-color1{
+#upper-body-center1{
   width: 200px;
   height: 30px;
-  background: #F0DDC3;
+  background: $color1;
   border-top-left-radius: 20px; //角丸の作成
   border-top-right-radius: 20px; //角丸の作成
 }
 
-$body_height1: 100px; //ボディーとブランク高さを定義
-.main_upper-body2{
+//腕、胴、足の部位は同じ記述を使用する為、値を定義した。
+.center2{
   display: flex;
   flex-direction: row;
   justify-content: center;  
 }
+.main_upper-body2 {
+  @extend .center2
+}
 #upper-body-left{
   width: 40px;
-  height: $body_height1;
-  background: #F0DDC3;
+  height: $body_upper_height1;
+  background: $color1;
 }
 .blank_upper_left1 {
   width: 5px;
-  height: $body_height1;
+  height: $body_upper_height1;
   background-color: rgba(0,0,255,0);
   border-top-left-radius: 2px; //角丸の作成
   border-top-right-radius: 2px; //角丸の作成
 }
-#upper-body-center1{
+#upper-body-center2{
   width: 110px;
-  height: $body_height1;
-  background: #F0DDC3;
+  height: $body_upper_height1;
+  background: $color1;
 }
 #upper-body-rigth{
   width: 40px;
-  height: $body_height1;
-  background: #F0DDC3;
+  height: $body_upper_height1;
+  background: $color1;
 }
 .blank_upper_rigth1{
   width: 5px;
-  height: $body_height1;
+  height: $body_upper_height1;
   background-color: rgba(0,0,255,0);
   border-top-left-radius: 2px; //角丸の作成
   border-top-right-radius: 2px; //角丸の作成
 }
 
-$body_height2: 20px; //ボディーとブランク高さを定義
+
+//同じ記述がある為まとめた
+$body_upper_height2: 20px; //ボディーとブランク高さを定義
 .blank_upper2{
   width: 5px;
-  height: $body_height2;
+  height: $body_upper_height2;
   background-color: rgba(0,0,255,0)
 }
 
 .main_upper-body3{
-  display: flex;
-  flex-direction: row;
-  justify-content: center;  
+  @extend .center2
 }
 .upper-left-hand{
   width: 40px;
-  height: $body_height2;
+  height: $body_upper_height2;
   border-radius:50%/ 0 0 100% 100%; //半円
-  background: #F0DDC3;
+  background: $color1;
 }
 .blank_upper_left2 {
   @extend .blank_upper2;
 }
-#upper-body-center2{
+#upper-body-center3{
   width: 110px;
-  height: $body_height2;
-  background: #F0DDC3;
+  height: $body_upper_height2;
+  background: $color1;
 }
 .blank_upper_rigth2 {
   @extend .blank_upper2;
 }
 .upper-rigth-hand2{
   width: 40px;
-  height: $body_height2;
+  height: $body_upper_height2;
   background-color: rgba(0,0,255,0);
   border-radius:50%/ 0 0 100% 100%; //半円
-  background: #F0DDC3;
+  background: $color1;
+}
+
+$leg_height: 120px; 
+.main_leg1{
+  @extend .center1;
+}
+#leg-center{
+  width: 110px;
+  height: 40px;
+  background: $color1;
+  margin-top: 1px;
+}
+.main_leg2{
+  @extend .center2
+}
+#leg_left{
+  width: 50px;
+  height: $leg_height; 
+  background: $color1;
+}
+.blank_leg_center{
+  background-color: rgba(0,0,255,0);
+  width: 10px;
+  height: $leg_height
+}
+#leg_rigth{
+  width: 50px;
+  height: $leg_height;
+  background: $color1;
+}
+
+$shoes_height: 20px; 
+.main_shoes{
+  @extend .center2
+}
+.shoes#shoes_left{
+  width: 70px;
+  height: $shoes_height;
+  background: $color1;
+  //| 左上 | 右上 | 右下 | 左下 |
+  border-radius: 15px 0 3px 4px;
+}
+.blank_shoes_center{
+  background-color: rgba(0,0,255,0);
+  width: 10px;
+  height: $shoes_height;
+}
+.shoes#shoes_rigth{
+  width: 70px;
+  height: $shoes_height;
+  background: $color1;
+  //| 左上 | 右上 | 右下 | 左下 |
+  border-radius: 0 15px 4px 3px;
 }
