--- a/app/assets/stylesheets/all/app.scss
+++ b/app/assets/stylesheets/all/app.scss
@@ -1,15 +1,15 @@
 body{
-  background-color: #f6f6f6;
+  background: -moz-linear-gradient(top, #232f3e 15%, #f6f6f6 50%);
+  background: -webkit-linear-gradient(top, #232f3e 15%, #f6f6f6 50%);
+  background: linear-gradient(to bottom, #232f3e 15%, #f6f6f6 50%);
   min-width: 650px;
-  .header{
-    height: 56px;
+    .header{
+    height: 55px;
     width: 100%;
     padding: 0 150px;
-    background-color: #005FFF;
-    opacity: 0.9;
-    color: #fff;
-    display: flex;
-    justify-content: space-between;
+    background-color: #232f3e;
+    border: 1px solid;
+    border-bottom-color: #fff;
     &__title{
       font-size: 30px;
       line-height: 56px;
