--- a/app/assets/stylesheets/all/app.scss
+++ b/app/assets/stylesheets/all/app.scss
@@ -3,20 +3,37 @@ body{
   background: -webkit-linear-gradient(top, #232f3e 15%, #f6f6f6 50%);
   background: linear-gradient(to bottom, #232f3e 15%, #f6f6f6 50%);
   min-width: 650px;
-    .header{
-    height: 55px;
+  .header{
+    height: 70px;
     width: 100%;
     padding: 0 150px;
     background-color: #232f3e;
     border: 1px solid;
     border-bottom-color: #fff;
-    &__title{
-      font-size: 30px;
-      line-height: 56px;
-      &--text{
+      &___sub__title{
+        font-family: "Futura-CondensedExtraBold", Futura, sans-serif;
+        font-stretch: condensed;
         text-decoration: none;
-        color: #fff;
+      &__main__title{
+        font-family: "Futura-CondensedExtraBold", Futura, sans-serif;
+        font-stretch: condensed;
       }
     }
   }
 }    
+
+.header__sub__title--text{
+  text-decoration: none;
+  color: #fff;
+  font-size: 15px;
+  line-height: 5px;
+  text-decoration: none;
+  font-weight: normal;
+}
+.header__main__title--text{
+  text-decoration: none;
+  color: #fff;
+  font-size: 40px;
+  line-height: 40px;
+  font-weight: bolder;
+} 
