--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -13,6 +13,9 @@
       .header__sub__title
         = link_to "自動配色選択コーディネートアプリ", '#', class: "header__sub__title--text"
       .header__main__title
-        = link_to "Future", '#', class: "header__main__title--text"
-
+        = link_to "Tetrads(テトラード)", '#', class: "header__main__title--text"
     = yield
+
+    %footer.footer
+      %p
+        %small 2020 Creator:Kengo Matsuno
