--- a/app/views/products/new.html.haml
+++ b/app/views/products/new.html.haml
@@ -1,4 +1,6 @@
 .main
+  %h2.main_title
+    配色を選択して下さい
   = form_with model: @product, class: :form, local: true do |form| #form_with model: モデルクラスのインスタンス do |form|
     = render partial: "form", locals: { form: form }
     
