--- a/app/views/products/new.html.haml
+++ b/app/views/products/new.html.haml
@@ -25,7 +25,7 @@
             = form.collection_check_boxes :leg_color, Color.all, :color_name, :color_display,  include_hidden: false, class: "input-default"
       .shose-color
         %label
-          レッグカラー
+          シューズカラー
           %span.form-require 必須
           .select-wrap
             = form.collection_check_boxes :shoes_color, Color.all, :color_name, :color_display,  include_hidden: false, class: "input-default"
