--- a/app/views/products/new.html.haml
+++ b/app/views/products/new.html.haml
@@ -30,7 +30,7 @@
           .select-wrap
             = form.collection_check_boxes :shoes_color, Color.all, :color_name, :color_display,  include_hidden: false, class: "input-default"
       .post_new
-        = form.submit '登録する', class: :form__btn
+        = form.submit '配色を登録する', class: :form_new_bottun
     
       
    
