--- a/app/assets/stylesheets/all/index.scss
+++ b/app/assets/stylesheets/all/index.scss
@@ -224,3 +224,20 @@ $shoes_height: 30px;
   border-radius: 0 15px 4px 3px;
   border: 1px solid black;
 }
+
+//投稿関連
+.form{
+  margin-top: 20px;
+}
+
+.form_index_bottun{
+  margin-left: 210px;
+  color: white;
+  background-color: #232f3e;
+  border-radius: 100px;
+  width: 300px;
+  height: 40px;
+  font-weight: bold;
+  
+}
+  
