--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -26,9 +26,9 @@
     .shoes#shoes_left
     .blank_shoes_center
     .shoes#shoes_rigth
-  %form
-    %input{type: "button", value:"更新" ,onclick:"effect1()"}/
+  %form.form
+    %input{type: "button", value:"更新" ,onclick:"effect1()", class: "form_index_bottun"}/
   .post_new
     = link_to "新規登録", new_product_path, class: "btn-default btn-gray"
   .post_edit
-    -# = link_to "色編集", "/products/#{@products[0].id}/edit", class: "btn-default btn-gray"
+    = link_to "色編集", "/products/#{@products[0].id}/edit", class: "btn-default btn-gray"
