--- a/app/views/products/new.html.haml
+++ b/app/views/products/new.html.haml
@@ -29,8 +29,8 @@
           %span.form-require 必須
           .select-wrap
             = form.collection_check_boxes :shoes_color, Color.all, :color_name, :color_display,  include_hidden: false, class: "input-default"
-      .post_new
-        = form.submit '配色を登録する', class: :form_new_bottun
+      .post
+        = form.submit '配色を登録する', class: :form_submit_bottun
     
       
    
