--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -1,2 +1,8 @@
-.post_new
-  = link_to "配色の登録", new_product_path, class: "btn-default btn-gray"
+.main
+  %h2.show_title
+    テトラードへようこそ！！
+    .main_show 
+      .left_show ああ
+      .rigth_show ああ
+  .post_new
+    = link_to "配色の登録画面", new_product_path, class: "btn-default btn-gray"
