--- a/app/views/products/edit.html.haml
+++ b/app/views/products/edit.html.haml
@@ -31,8 +31,8 @@
             = form.collection_check_boxes :shoes_color, Color.all, :color_name, :color_display,  include_hidden: false, class: "input-default"
       .post
         = form.submit '登録する', class: :form_submit_bottun
-      .post_new
-        = link_to "戻る", root_path, class: "btn-default btn-gray"
+      -# .post_new
+      -#   = link_to "戻る", root_path, class: "btn-default btn-gray"
       
    
 
