--- a/app/assets/stylesheets/all/app.scss
+++ b/app/assets/stylesheets/all/app.scss
@@ -1,68 +1,93 @@
-body{
-  background: -moz-linear-gradient(top, #232f3e 15%, #f6f6f6 50%);
-  background: -webkit-linear-gradient(top, #232f3e 15%, #f6f6f6 50%);
-  background: linear-gradient(to bottom, #232f3e 15%, #f6f6f6 50%);
-  min-width: 650px;
-  .header{
-    height: 70px;
-    width: 100%;
-    padding: 0 150px;
-    background-color: #232f3e;
-    display: flex;
-    justify-content: space-between;
-      &___sub__title{
-        font-family: "Futura-CondensedExtraBold", Futura, sans-serif;
-        font-stretch: condensed;
-        text-decoration: none;
-        &__main__title{
+  
+  body{
+    background: -moz-linear-gradient(top, #232f3e 15%, #f6f6f6 50%);
+    background: -webkit-linear-gradient(top, #232f3e 15%, #f6f6f6 50%);
+    background: linear-gradient(to bottom, #232f3e 15%, #f6f6f6 50%);
+    min-width: 650px;
+    .header{
+      height: 70px;
+      width: 100%;
+      padding: 0 150px;
+      background-color: #232f3e;
+      display: flex;
+      justify-content: space-between;
+        &___sub__title{
           font-family: "Futura-CondensedExtraBold", Futura, sans-serif;
           font-stretch: condensed;
-        }
+          text-decoration: none;
+          &__main__title{
+            font-family: "Futura-CondensedExtraBold", Futura, sans-serif;
+            font-stretch: condensed;
+          }
+      }
+    }
+  }    
+
+  .header__sub__title--text{
+    text-decoration: none;
+    color: #fff;
+    font-size: 15px;
+    line-height: 5px;
+    text-decoration: none;
+    font-weight: normal;
+    
+  }
+  .header__main__title--text{
+    text-decoration: none;
+    color: #fff;
+    font-size: 35px;
+    line-height: 40px;
+    font-weight: bolder;
+    font-style : italic;
+  } 
+
+  .footer {
+    z-index: 1;
+    height: 10px;
+    padding: 10px 0;
+    text-align: center;
+  }
+  p {
+    margin: 10px 0 0;
+  }
+  small {
+    font-size: 8px;
+    color: white;
+  }
+
+  .header__right{
+    font-family: "Futura-CondensedExtraBold", Futura, sans-serif;
+    font-stretch: condensed;
+    text-decoration: none;
+    &--btn{
+      font-weight: bolder;
+      text-decoration: none;
+      line-height: 70px;
+      color: #fff;
+      margin-right: 30px;
+    }
+  }   
+
+
+  @media screen and (max-width: 480px){
+    .body{
+      width: 375px;
+    }
+    .header{
+      width: px;
+      height: 70px;
+      padding: 0 50px;
+    }
+    .header__sub__title--text{
+      font-size: 12px;
+    }
+    .header__main__title--text{
+      font-size: 22px;
+    }
+    .header__right{
+      font-size: 10px;
+    }
+    .footer {
+      height: 10px;
     }
   }
-}    
-
-.header__sub__title--text{
-  text-decoration: none;
-  color: #fff;
-  font-size: 15px;
-  line-height: 5px;
-  text-decoration: none;
-  font-weight: normal;
-  
-}
-.header__main__title--text{
-  text-decoration: none;
-  color: #fff;
-  font-size: 35px;
-  line-height: 40px;
-  font-weight: bolder;
-  font-style : italic;
-} 
-
-.footer {
-  z-index: 1;
-  height: 10px;
-  padding: 10px 0;
-  text-align: center;
-}
-p {
-  margin: 10px 0 0;
-}
-small {
-  font-size: 8px;
-  color: white;
-}
-
-.header__right{
-  font-family: "Futura-CondensedExtraBold", Futura, sans-serif;
-  font-stretch: condensed;
-  text-decoration: none;
-  &--btn{
-    font-weight: bolder;
-    text-decoration: none;
-    line-height: 70px;
-    color: #fff;
-    margin-right: 30px;
-  }
-}   
