--- a/app/assets/stylesheets/all/show.scss
+++ b/app/assets/stylesheets/all/show.scss
@@ -73,3 +73,12 @@
 font-size: 12px;
 color: red;
 }
+
+@media screen and (max-width: 375px){
+  .main{
+    width: 200;
+  }
+  .show_title{
+    font-size: 20px;
+  }
+}
