--- a/app/views/products/edit.html.haml
+++ b/app/views/products/edit.html.haml
@@ -10,25 +10,25 @@
           ヘッドカラー
           %span.form-require 必須
           .select-wrap 
-            = form.collection_check_boxes :head_color, Color.all, :color_name, :color_display,  include_hidden: false, class: "input-default"
+            = form.collection_check_boxes :head_color, Color.all, :color_name, :color_display,  include_hidden: true, class: "input-default"
       .upper_body-color
         %label
           ボディーカラー
           %span.form-require 必須
           .select-wrap
-            = form.collection_check_boxes :boy_color, Color.all, :color_name, :color_display,  include_hidden: false, class: "input-default"
+            = form.collection_check_boxes :boy_color, Color.all, :color_name, :color_display,  include_hidden: true, class: "input-default"
       .leg-color
         %label
           レッグカラー
           %span.form-require 必須
           .select-wrap
-            = form.collection_check_boxes :leg_color, Color.all, :color_name, :color_display,  include_hidden: false, class: "input-default"
+            = form.collection_check_boxes :leg_color, Color.all, :color_name, :color_display,  include_hidden: true, class: "input-default"
       .shose-color
         %label
           レッグカラー
           %span.form-require 必須
           .select-wrap
-            = form.collection_check_boxes :shoes_color, Color.all, :color_name, :color_display,  include_hidden: false, class: "input-default"
+            = form.collection_check_boxes :shoes_color, Color.all, :color_name, :color_display,  include_hidden: true, class: "input-default"
       .post
         = form.submit '登録する', class: :form_submit_bottun
       -# .post_new
